[package]
name        = "aktoro"
description = "Yet another actor framework for Rust."
version     = "0.1.0-alpha.1"
license     = "MIT"
authors     = ["Matthieu Le Brazidec <matthieu@lebrazidec.email>"]
edition     = "2018"

[features]
default = ["aktoro-runtime"]

[dependencies.aktoro-raw]
path    = "aktoro-raw"
version = "0.1.0-alpha.1"

[dependencies.aktoro-runtime]
path     = "aktoro-runtime"
version  = "0.1.0-alpha.1"
optional = true

[workspace]
members = [
	".",
	"aktoro-channel",
	"aktoro-raw",
	"aktoro-runtime",

	"examples/hello_world",
]
