[package]
name        = "aktoro"
description = "Yet another actor framework for Rust."
version     = "0.1.0-alpha.2"
license     = "MIT"
authors     = ["Matthieu Le Brazidec <matthieu@lebrazidec.email>"]
edition     = "2018"

[features]
default = ["context", "runtime"]
context = ["aktoro-context"]
runtime = ["aktoro-runtime"]

[dependencies.aktoro-context]
path     = "aktoro-context"
version  = "0.1.0-alpha.2"
optional = true

[dependencies.aktoro-raw]
path    = "aktoro-raw"
version = "0.1.0-alpha.2"

[dependencies.aktoro-runtime]
path     = "aktoro-runtime"
version  = "0.1.0-alpha.2"
optional = true

[workspace]
members = [
	".",
	"aktoro-channel",
	"aktoro-raw",

	"aktoro-context",
	"aktoro-runtime",

#	"examples/hello_world", # See: https://github.com/rust-lang/rust/pull/61872
]
