[package]
name        = "aktoro-context"
description = "aktoro's context default implementation"
version     = "0.1.0-alpha.3"
license     = "MIT"
authors     = ["Matthieu Le Brazidec <matthieu@lebrazidec.email>"]
edition     = "2018"

[dependencies]
crossbeam-utils      = "0.6"
futures-core-preview = "0.3.0-alpha.17"
futures-io-preview   = "0.3.0-alpha.17"
futures-util-preview = "0.3.0-alpha.17"

[dependencies.aktoro-channel]
path    = "../aktoro-channel"
version = "0.1.0-alpha.6"

[dependencies.aktoro-raw]
path    = "../aktoro-raw"
version = "0.1.0-alpha.3"
