[package]
name        = "aktoro-raw"
description = "aktoro's raw API"
version     = "0.1.0-alpha.4"
license     = "MIT"
authors     = ["Matthieu Le Brazidec <matthieu@lebrazidec.email>"]
edition     = "2018"

[dependencies]
crossbeam-utils      = "0.6"
futures-core-preview = "0.3.0-alpha.17"
futures-io-preview   = "0.3.0-alpha.17"
