[package]
name    = "hello_world"
version = "0.0.0"
license = "MIT"
authors = ["Matthieu Le Brazidec <matthieu@lebrazidec.email>"]
edition = "2018"

[dependencies]
runtime = "0.3.0-alpha.6"

[dependencies.aktoro]
path    = "../.."
version = "0.1.0-alpha.4"

[dependencies.futures-util-preview]
version  = "0.3.0-alpha.17"
features = ["nightly", "async-await", "select-macro"]
